# nooz.rip

./: .gitignore  Makefile  README.md  notes.org  pyproject.toml
app/: main.py  run.py  settings.py
app/lib/: article.py  schema.py
app/static/: 0.css
app/templates/: article.tmpl  cards.tmpl  index.tmpl
data/: feeds.db  feeds.db.zst  fetch_xmls.py  normalize.py
data/feedlists/: ._dump.list.swp  0x9090_18db21f501bdab325ae4b242789a83c6_Nops_Blogs.opml  84adam_8b1961cbd0e0e36b08efac842ab1ad07_AA-Bitcoin-RSS-Feeds.opml  ConstantinTi_1b627daeae05ef9105f5bd2b56b4d4a5_secnews.opml  Gracker_Rss-IT_rss_it_2016_5_30.opml  Mac-iOS-Tech-Blogs-By-Women.opml  PierreZ_7aebca8c13e7a9005356_feedly.opml  RSS-Renaissance_awesome-AI-feeds_feedlist.opml  RSS-Renaissance_awesome-AI-news-feeds_feedlist.opml  RSS-Renaissance_awesome-emacs-feeds_feedlist.opml  Reedbeta_dd800c6bda59c3351fbd3474acbea430_cool-game-programming-blogs.opml  _dump.list  alexbaumgertner_0d388bfe3848e79143a01d49e8e1d9cc_js-dev.opml  anthill_blogroll.opml  bbthorson_766667f7b1a4c75abcbb7fc6577eeb51_podcast-feeds.csv  benkehoe_2a846d3bb0044ca5d99073458280f36e_aws.opml  blogroll.opml  canac_647a8c4542cc088b333b3d0bcc765b9d_feeds.toml  chrisalbon_9dbe5e90a8d25fdcca0a820d60c29605_Machine-Learning-RSS-Feeds.opml  chriscoyier_964905_gistfile1.txt  chrisfinazzo_3013dcc0747d745866553e5ec833f8a7_NetNewsWire-Feeds.opml  decal_5814eacf259483b878ef8e8efabc693d_infosec-blog-feed-list-decalresponds.opml  eddiez9_5547081c9df4238d4c47a0e5730ef274_feedly.opml  eegdude_81fc1dbf7473f83d31750c55d5bbd510_neuroscience_feeds.opml  (+17 more)
(+58 files in other folders)
