[tool.poetry]
name = "nooz"
version = "0.1.0"
description = "the nooz"
authors = ["Richard Benson <richard@rkben.dev>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
trafilatura = {extras = ["all"], version = "^1.6.2"}
fastapi = "^0.104.1"
htmldate = {extras = ["speed"], version = "^1.6.0"}
httpx = "^0.25.2"
jinja2 = "^3.1.2"
loguru = "^0.7.2"
markdown = "^3.5.1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python = "^3.12"
python-ulid = "^2.2.0"
uvicorn = "^0.24.0.post1"
orjson = "^3.9.10"
brotli = "^1.1.0"
spacy = "^3.7.2"
rxml = "^1.0.1"
lxml = "^5.1.0"
xmltodict = "^0.13.0"
beautifulsoup4 = "^4.12.3"
feedparser = "^6.0.11"
tortoise-orm = {git = "https://github.com/tortoise/tortoise-orm.git", rev = "develop", extras = ["aiosqlite", "accel"]}

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.1.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
